# mincaml--

./: .gitignore  .gitmodules  Makefile  Makefile.mincaml  README.md  answer2.ml  beta.ml  build.ml  closure.mli  dune  emit_bc.ml  emit_wasm.ml  id.ml  index.html  kNormal.ml  kNormal.mli  lexer.mll  main.ml  main.mli  min-caml.install  mincaml.install  parser.mly  stub.c  sum-tail.mc.data.1  syntax.ml  to_x64  typing.ml  unparser.ml  unparser.mli
baccaml/: bytegen.ml  config.ml  dune  emit.ml  emit.mli  insts.ml  insts.mli  interp.bc  vM.ml
interp/: fib.byte  gcd.byte  interp.bc  interp.mcml  matmul-flat-int.byte
mcmm/: dune  emit.ml
src/: alpha.ml  asm.ml  asm.mli  assoc.ml  beta.ml  closure.ml  closure.mli  constFold.ml  dune  elim.ml  id.ml  inline.ml  kNormal.ml  kNormal.mli  lexer.mll  libmincaml.S  main.ml  parser.mly  regAlloc.ml  simm.ml  stub.c  syntax.ml  trans.ml  type.ml  typing.ml  unparser.ml  util.ml  virtual.ml
test/: ack.ml  ack_time.ml  annot.ml  array.ml  bubble_sort.ml  div.ml  example_acc.ml  fact.ml  fact_time.ml  fib-sum-tail.ml  fib-sum.mj.ml  fib-sum.ml  fib-sum_time.ml  fib-tail.ml  fib.ml  fib25_time.ml  fib_time.ml  gcd.ml  if.ml  matmul-flat-int.ml  prefix_sum_time.ml  primes.ml  quick_sort.ml  random.ml  random_time.ml  sieve.ml  sieve_time.ml  simple2.ml  simple3.ml  square-tail.ml  square-tail_time.ml  square.ml  square_time.ml  sum-ack-mj.ml  sum-ack.ml  sum-fib-tail.ml  sum-fib.mj.ml  sum-fib.ml  sum-fib_time.ml  sum-tail-time.ml  (+15 more)
wasm/: dune  emit.ml
x64/: Makefile  asm.ml  dune  emit.ml  emit.mli  libmincaml.S  virtual.ml
(+7 files in other folders)
