(ocamllex (modules lexer))
(ocamlyacc (modules parser))

(library
 (name MinCaml)
 (public_name min-caml.base)
 (modules (:standard \ main anchor))
 (flags (-w -4-33-40-41))
 (libraries str)
 (c_names float)
 (preprocess (pps ppx_deriving.show)))

(executable
 (name main)
 (public_name min-caml)
 (flags (-w -4-33-40-41))
 (modules Main)
 (libraries MinCaml))
