(library
 (name BacCaml)
 (public_name min-caml.bacCaml)
 (modules
  (:standard \ bytegen))
 (flags
  (-w -4-33-40-41))
 (libraries str MinCaml)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.enum)))

(executable
 (name bytegen)
 (public_name bac-caml)
 (flags
  (-w -4-33-40-41))
 (modules Bytegen)
 (package bac-caml)
 (libraries MinCaml BacCaml))
